Fix big header nav link alignment on smaller screens

--- a/src/components/BigHeader/bigHeader.module.css
+++ b/src/components/BigHeader/bigHeader.module.css
@@ -41,6 +41,7 @@
 @media only screen and (max-width: 768px) {
     .nav {
         justify-content: center;
+        padding-right: 0;
     }
 
     .nav a {
